# LxRunOffline

src/: CMakeLists.txt
src/LxRunOfflineDll/: CMakeLists.txt  config.h.in  main.cpp
src/LxRunOfflineDll/res/: resources.rc
